--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -133,7 +133,7 @@
         android:id="@+id/button5"
         android:layout_width="148dp"
         android:layout_height="55dp"
-        android:backgroundTint="@color/dark_gray"
+        android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
         android:text="Registrarse"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,7 +144,7 @@
         android:id="@+id/button6"
         android:layout_width="148dp"
         android:layout_height="55dp"
-        android:backgroundTint="@color/dark_gray"
+        android:backgroundTint="@color/md_theme_light_onSurfaceVariant"
         android:text="Entrar"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,9 +160,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rubén Irimia  Pérez License GNU 3.0"
+        android:layout_width="165dp"
+        android:layout_height="22dp"
+        android:text="©EventUp License GPLv3"
+        android:textColor="@color/md_theme_dark_scrim"
         app:layout_constraintBottom_toBottomOf="@+id/gradientSplash2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
