--- a/app/src/main/res/layout/activity_splah_screen.xml
+++ b/app/src/main/res/layout/activity_splah_screen.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.5"
-        android:background="@drawable/fondo" />
+        android:background="@drawable/gradient" />
 
     <ImageView
         android:id="@+id/backgroundSplash"
@@ -31,14 +31,16 @@
 
     <TextView
         android:id="@+id/appNameSplash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="192dp"
+        android:layout_height="56dp"
         android:layout_marginTop="-30dp"
         android:fontFamily="@font/classicaldiary"
         android:text="@string/app_name"
+        android:textColor="@color/md_theme_dark_inverseOnSurface"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/v2"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="@id/v1"
         app:layout_constraintTop_toBottomOf="@id/logoSplash"></TextView>
 
