--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -6,7 +6,7 @@
         android:fromDegrees="-5"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:repeatCount="5"
+        android:repeatCount="infinite"
         android:repeatMode="reverse"
         android:interpolator="@android:anim/linear_interpolator"
         android:toDegrees="5" />
