--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/crema"
-        android:endColor="@color/dark_gray"
+        android:startColor="@color/md_theme_dark_onPrimaryContainer"
+        android:endColor="@color/md_theme_light_outline"
         android:angle="90"
         >
     </gradient>
